Change challenge card size

--- a/front-developers-games/src/assets/styles/styleConstants.scss
+++ b/front-developers-games/src/assets/styles/styleConstants.scss
@@ -29,6 +29,7 @@ $text-bolder: 900;
 $text-14: 14px;
 $text-16: 16px;
 $text-20: 20px;
+$text-22: 22px;
 $text-24: 24px;
 $text-32: 32px;
 $text-38: 38px;
