--- a/front-developers-games/src/views/Challenges/components/ChallengeCard/ChallengeCard.scss
+++ b/front-developers-games/src/views/Challenges/components/ChallengeCard/ChallengeCard.scss
@@ -4,19 +4,20 @@
 
 .challenge-card {
     @include flex($flex-direction: column, $align-items: center);
-    padding: $p-12;
+    padding: $p-12 $p-8;;
     border: 1px solid $lighterBlue;
     border-radius: $border-radius;
     width: 100%;
-    max-width: 280px;
+    max-width: 300px;
+    min-height: 225px;
     margin: $m-8;
-
+    text-align: center;
     &:hover {
-        background-color: $lighterBlue-transparent
+        background-color: $lighterBlue-transparent;
     }
 
     @media only screen and (min-width: $query-1280){
-        padding: $p-16;
+        padding: $p-16 $p-8;
         margin: $m-12 ;
     }
 }
@@ -28,7 +29,7 @@
 
 .challenge__title {
     color: $darkBlue;
-    font-size: $text-24;
+    font-size: $text-22;
 }
 
 .challenge__subtitle {
