Fix desktop profile image style

--- a/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
+++ b/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
@@ -32,7 +32,8 @@
     @include flex($flex-direction: column);
     width: 80%;
     @media only screen and(min-width: $query-1280){
-        @include flex($flex-direction: row);
+        flex-direction: row;
+        justify-content: space-between;
         width: 100%;
     }
 }
