--- a/front-developers-games/src/views/ChallengesPageContainer/components/Challenges/Challenges.scss
+++ b/front-developers-games/src/views/ChallengesPageContainer/components/Challenges/Challenges.scss
@@ -1,6 +1,6 @@
-@import '../../assets/styles/mixins.scss';
-@import '../../assets/styles/globalStyles.scss';
-@import '../../assets/styles/styleConstants.scss';
+@import '../../../../assets/styles/mixins.scss';
+@import '../../../../assets/styles/globalStyles.scss';
+@import '../../../../assets/styles/styleConstants.scss';
 
 .challenges {
     @include flex($flex-direction:column, $align-items:center);
