Add redux flux to active/desactive challenge button

--- a/front-developers-games/src/assets/styles/globalStyles.scss
+++ b/front-developers-games/src/assets/styles/globalStyles.scss
@@ -64,7 +64,7 @@
 }
 
 .view-profile__top {
-    @include flex($justify-content: space-between);
+    @include flex($justify-content: space-between, $align-items: flex-end);
 
     width: 80%;
     margin-bottom: $m-12;
