--- a/front-developers-games/src/components/Header/Header.scss
+++ b/front-developers-games/src/components/Header/Header.scss
@@ -106,8 +106,8 @@
     width: 100%;
     max-height: 300px;
     @media only screen and (min-width: $query-1280) {
-      @include flex($justify-content: space-evenly);
-      width: 50%;
+      @include flex($justify-content: flex-end);
+      width: 70%;
       max-height: unset;
     }
   }
@@ -124,6 +124,7 @@
     font-size: $text-16;
     text-align: center;
     @media only screen and (min-width: $query-1280) {
+      margin-left: $m-32;
       color: $semiBlue;
       &:hover {
         color: $darkBlue;
