--- a/front-developers-games/src/views/ChallengeDetail/ChallengeDetail.scss
+++ b/front-developers-games/src/views/ChallengeDetail/ChallengeDetail.scss
@@ -50,12 +50,28 @@
 .challenge__video {
     @include flex();
     width: 100%;
+    height: 320px;
     background: $semiBlue;
     margin: $m-18 0;
     position: relative;
     z-index: 1;
     @media only screen and (min-width: $query-1280) {
         width: calc(100vw - 15px);
+    }
+}
+
+.video__player {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.challenge__video iframe {
+    width: 100%;
+    height: 100%;
+
+    @media only screen and(min-width:$query-1280){
+        width: 800px;
     }
 }
 
@@ -66,16 +82,6 @@
     right: -9999px;
     z-index: -1;
     background: $semiBlue;
-
-    
-}
-
-.video__player{
-    width: 100%;
-
-    @media only screen and(min-width:$query-1280){
-        width: 800px;
-    }
 }
 
 .challenge__specific-info {
