--- a/front-developers-games/src/views/ChallengeDetail/ChallengeDetail.scss
+++ b/front-developers-games/src/views/ChallengeDetail/ChallengeDetail.scss
@@ -14,7 +14,7 @@
 
 .challenge__info-group {
     @include flex($flex-direction: column);
-    margin-bottom: $m-18;
+    margin-bottom: $m-24;
 }
 
 .challenge__info-group--leftalign {
@@ -35,6 +35,7 @@
 .info-group__description {
     color: $darkBlue;
     text-align: center;
+    max-width: 1024px;
 }
 
 .info-group__description--leftalign {
@@ -120,7 +121,7 @@
 
 .challenge__duration {
     @include flex($flex-direction:column);
-    margin-bottom: $m-18;
+    margin-bottom: $m-8;
 
     @media only screen and(min-width:$query-1280){
         align-items: flex-start;
@@ -168,6 +169,9 @@
 
 .list__element {
     color: $darkBlue;
+}
+
+.list__element--bold {
     font-weight: bold;
 }
 
@@ -214,4 +218,16 @@
 
 #deliverable__input {
     display: none;
+}
+
+.list-padding-more {
+    padding-left: 32px
+}
+
+.custom-left-padding {
+    padding-left: $p-16;
+}
+
+.custom-left-padding--more{
+    padding-left: $p-32;
 }
