Add font size to challenge

--- a/front-developers-games/src/views/ChallengeDetail/ChallengeDetail.scss
+++ b/front-developers-games/src/views/ChallengeDetail/ChallengeDetail.scss
@@ -36,6 +36,7 @@
     color: $darkBlue;
     text-align: center;
     max-width: 1024px;
+    font-size: $text-14;
 }
 
 .info-group__description--leftalign {
@@ -169,10 +170,12 @@
 
 .list__element {
     color: $darkBlue;
+    font-size: $text-14;
 }
 
 .list__element--bold {
     font-weight: bold;
+    font-size: $text-14;
 }
 
 .bottom__boxes {
@@ -226,8 +229,10 @@
 
 .custom-left-padding {
     padding-left: $p-16;
+    font-size: $text-14;
 }
 
 .custom-left-padding--more{
     padding-left: $p-32;
+    font-size: $text-14;
 }
