--- a/front-developers-games/src/components/Header/Header.scss
+++ b/front-developers-games/src/components/Header/Header.scss
@@ -1,163 +1,161 @@
-@import '../../assets/styles/globalStyles.scss';
-@import '../../assets/styles/mixins.scss';
-@import '../../assets/styles/styleConstants.scss';
+@import "../../assets/styles/globalStyles.scss";
+@import "../../assets/styles/mixins.scss";
+@import "../../assets/styles/styleConstants.scss";
 
 .header {
-    @include flex($flex-direction:column);
-    width: 100%;
-    margin-top: 60px;
-  }
-  
-  .header__menu {
-    @include flex($justify-content: space-between);
-    height: 60px;
-    width: 100%;
-    max-width: 100vw;
-    padding: $p-16 $p-24;
-    position: fixed;
-    background-color: white;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9;
-    border-bottom: 0.5px solid $lightBlue;
-    @media only screen and (min-width: $query-1280) {
-      padding: $p-12 $p-48;
+  @include flex($flex-direction: column);
+  width: 100%;
+  margin-top: 60px;
+}
 
-    }
+.header__menu {
+  @include flex($justify-content: space-between);
+  height: 60px;
+  width: 100%;
+  max-width: 100vw;
+  padding: $p-16 $p-24;
+  position: fixed;
+  background-color: white;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9;
+  border-bottom: 0.5px solid $lightBlue;
+  @media only screen and (min-width: $query-1280) {
+    padding: $p-12 $p-48;
+  }
 }
 
 .menu__logo {
-    height: 100%;
+  height: 100%;
 }
 
 .logo__image {
-    height: 100%;
-    cursor: pointer;
+  height: 100%;
+  cursor: pointer;
 }
 
 .menu__hamburger {
-    height: 100%;
-    cursor: pointer;
+  height: 100%;
+  cursor: pointer;
 }
 
 .mobile-menu__behind {
-    width: 0vw;
-    height: 100vh;
-    z-index: 10;
-    background: rgba(0, 0, 0, 0.25);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    transform: scaleX(0);
-    transition: all 0.5s ease;
-    transform-origin: 100% 50%;
-  }
-  
-  .mobile-menu__behind--visible {
-    width: 100vw;
-    position: fixed;
-    -ms-transform: scaleX(2); /* IE 9 */
-    transform: scaleX(1);
-  }
-  
-  .header__mobile-menu {
-    @include flex($flex-direction: column);
-    position: absolute;
-    top: 0;
-    right: -60%;
-    bottom: 0;
-    width: 60%;
-    z-index: 11;
-    height: 100vh;
-    list-style: none;
-    color: white;
-    background-color: $semiBlue;
-    box-shadow: $box-shadow;
-    cursor: pointer;
-    transition: all 0.5s ease;
-    -ms-transform: scaleX(0); /* IE 9 */
-    transform: scaleX(0);
-    overflow: hidden;
-    padding: 20px 32px;
-  }
-  
-  .header__mobile-menu--visible {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    list-style: none;
-    transform: scaleX(1);
-    overflow: hidden;
-    padding: 20px 32px;
-  }
+  width: 0vw;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.25);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  transform: scaleX(0);
+  transition: all 0.5s ease;
+  transform-origin: 100% 50%;
+}
 
-  .mobile-menu__close {
-    position: absolute;
-    top: $p-16;
-    right: $p-32;
-    height: 33px;
+.mobile-menu__behind--visible {
+  width: 100vw;
+  position: fixed;
+  -ms-transform: scaleX(2); /* IE 9 */
+  transform: scaleX(1);
+}
+
+.header__mobile-menu {
+  @include flex($flex-direction: column);
+  position: absolute;
+  top: 0;
+  right: -60%;
+  bottom: 0;
+  width: 60%;
+  z-index: 11;
+  height: 100vh;
+  list-style: none;
+  color: white;
+  background-color: $semiBlue;
+  box-shadow: $box-shadow;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  -ms-transform: scaleX(0); /* IE 9 */
+  transform: scaleX(0);
+  overflow: hidden;
+  padding: 20px 32px;
+}
+
+.header__mobile-menu--visible {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  list-style: none;
+  transform: scaleX(1);
+  overflow: hidden;
+  padding: 20px 32px;
+}
+
+.mobile-menu__close {
+  position: absolute;
+  top: $p-16;
+  right: $p-32;
+  height: 33px;
+}
+
+.menu__navigation {
+  @include flex($flex-direction: column);
+  height: 100%;
+  width: 100%;
+  max-height: 300px;
+  @media only screen and (min-width: $query-1280) {
+    @include flex($justify-content: flex-end);
+    max-height: unset;
   }
-  
-  .menu__navigation {
-    @include flex($flex-direction: column);
-    height: 100%;
-    width: 100%;
-    max-height: 300px;
-    @media only screen and (min-width: $query-1280) {
-      @include flex($justify-content: flex-end);
-      // width: 70%;
-      max-height: unset;
+}
+
+.navigation__item {
+  @include flex($flex-direction: column);
+  position: relative;
+  font-weight: bold;
+  list-style: none;
+  text-decoration: none;
+  cursor: pointer;
+  height: 100%;
+  color: white;
+  font-size: $text-16;
+  text-align: center;
+  @media only screen and (min-width: $query-1280) {
+    margin-left: $m-32;
+    color: $semiBlue;
+    &:hover {
+      color: $darkBlue;
     }
   }
+}
 
-  .navigation__item {
-    @include flex($flex-direction: column);
-    position: relative;
-    font-weight: bold;
-    list-style: none;
-    text-decoration: none;
-    cursor: pointer;
-    height: 100%;
-    color: white;
-    font-size: $text-16;
-    text-align: center;
-    @media only screen and (min-width: $query-1280) {
-      margin-left: $m-32;
-      color: $semiBlue;
-      &:hover {
-        color: $darkBlue;
-      }
-    }
+.navigation__item--active {
+  color: $lighterBlue;
+}
+
+.header__banner--big {
+  background-image: url("../../assets/images/home-big-banner.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 180px;
+  @media only screen and (min-width: $query-1280) {
+    height: 260px;
   }
+}
 
-  .navigation__item--active {
-      color: $lighterBlue;
+.header__banner--small {
+  background-image: url("../../assets/images/home-small-banner.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100px;
+  @media only screen and (min-width: $query-1280) {
+    height: 200px;
   }
-
-  .header__banner--big {
-      background-image: url('../../assets/images/home-big-banner.svg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      width: 100%;
-      height: 180px;
-      @media only screen and (min-width: $query-1280) {
-        height: 260px;
-      }
-  }
-
-  .header__banner--small {
-    background-image: url('../../assets/images/home-small-banner.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100px;
-    @media only screen and (min-width: $query-1280) {
-      height: 200px;
-    }
 }
 
 .navigation__avatar {
@@ -171,7 +169,7 @@
 .login-info__avatar--small {
   width: 40px;
   height: 40px;
-  border: 1px solid #008A8C;
+  border: 1px solid #008a8c;
   border-radius: 50%;
   overflow: hidden;
   margin-left: $m-8;
