--- a/front-developers-games/src/views/EditProfile/components/ParticipantProfile/ParticipantProfile.scss
+++ b/front-developers-games/src/views/EditProfile/components/ParticipantProfile/ParticipantProfile.scss
@@ -1,3 +1,26 @@
-@import '../../../../assets/styles/globalStyles.scss';
-@import '../../../../assets/styles/mixins.scss';
-@import '../../../../assets/styles/styleConstants.scss';
+@import "../../../../assets/styles/globalStyles.scss";
+@import "../../../../assets/styles/mixins.scss";
+@import "../../../../assets/styles/styleConstants.scss";
+
+.entries__mail {
+  width: 100%;
+  height: 24px;
+  margin-bottom: $m-16;
+  @media only screen and (min-width: $query-1280) {
+    width: 65%;
+    height: 35px;
+    margin-bottom: unset;
+    padding-right: $p-8;
+  }
+}
+
+.entries__number {
+  width: 100%;
+  height: 24px;
+  margin-bottom: $m-12;
+  @media only screen and (min-width: $query-1280) {
+    width: 35%;
+    margin-bottom: unset;
+    height: 35px;
+  }
+}
