--- a/front-developers-games/src/views/EditProfile/components/TeamProfileParticipant/TeamProfileParticipant.scss
+++ b/front-developers-games/src/views/EditProfile/components/TeamProfileParticipant/TeamProfileParticipant.scss
@@ -44,6 +44,18 @@
   }
 }
 
+.participant__inputs {
+  width: 100%;
+}
+
+.inputs__entries {
+  width: 100%;
+  @media only screen and (min-width: $query-1280) {
+    @include flex();
+    margin-bottom: $m-16;
+  }
+}
+
 .entries__name {
   width: 100%;
   height: 24px;
