Add renews terms

--- a/front-developers-games/src/views/TermsAndConditions/TermsAndConditions.scss
+++ b/front-developers-games/src/views/TermsAndConditions/TermsAndConditions.scss
@@ -23,6 +23,11 @@
     margin-bottom: $m-6;
 }
 
+.terms__text-title{
+    color: $darkBlue;
+    font-family: $font-text;
+}
+
 .terms__text {
     text-align: center;
     margin-bottom: $m-32;
