--- a/front-developers-games/src/views/ChallengesPageContainer/components/Challenges/Challenges.scss
+++ b/front-developers-games/src/views/ChallengesPageContainer/components/Challenges/Challenges.scss
@@ -1,67 +1,71 @@
-@import '../../../../assets/styles/mixins.scss';
-@import '../../../../assets/styles/globalStyles.scss';
-@import '../../../../assets/styles/styleConstants.scss';
+@import "../../../../assets/styles/mixins.scss";
+@import "../../../../assets/styles/globalStyles.scss";
+@import "../../../../assets/styles/styleConstants.scss";
 
 .challenges {
-    @include flex($flex-direction:column, $align-items:center);
-    width: 100%;
-    padding: $p-4;
+  @include flex($flex-direction: column, $align-items: center);
+  width: 100%;
+  padding: $p-4;
 }
 
-.challenges__text{
-    color: $darkBlue;
-    font-weight: $text-semibold;
-    text-align: center;
-    margin-bottom: 12px;
+.challenges__text {
+  color: $darkBlue;
+  font-weight: $text-semibold;
+  text-align: center;
+  margin-bottom: 12px;
 }
 
 .challenges__loading {
-    @include flex();
-    width: 100%;
+  @include flex();
+  width: 100%;
 }
 
 .challenges__challenge-list {
-    @include flex($flex-direction:column, $align-items:center);
+  @include flex($flex-direction: column, $align-items: center);
 
-    width: 100%;
-    margin-bottom: $m-24;
+  width: 100%;
+  margin-bottom: $m-24;
 
-    @media only screen and (min-width: $query-1280){
-        @include flex($flex-direction:row, $align-items:center, $justify-content: space-between);
-        flex-wrap: wrap;
-        max-width: 980px;
-    }
+  @media only screen and (min-width: $query-1280) {
+    @include flex(
+      $flex-direction: row,
+      $align-items: center,
+      $justify-content: start
+    );
+    flex-wrap: wrap;
+    max-width: 980px;
+  }
 }
 
 .challenges__actions {
-    @include flex($flex-direction:column);
+  @include flex($flex-direction: column);
 
-    width: 100%;
+  width: 100%;
 }
 
 .actions__welcome-kit {
-    width: 230px;
-    margin-bottom: $m-12;
+  width: 230px;
+  margin-bottom: $m-12;
 }
 
 .welcome-kit__link {
-    @include flex();
+  @include flex();
 }
 
 .link__image {
-    width: 25px;
-    margin-right: $m-8;
+  width: 25px;
+  margin-right: $m-8;
 }
 
-.link__text{
-    color: $darkBlue;
-    font-weight: bold;
+.link__text {
+  color: $darkBlue;
+  font-weight: bold;
 }
 
 .actions__edit-team {
-    width: 230px;
+  width: 230px;
 }
 
 .edit-team__link {
-    @include flex();
+  @include flex();
 }
